fix bug where logo was overflowing on landscape mobile devices

--- a/src/styles/containers/_landing.scss
+++ b/src/styles/containers/_landing.scss
@@ -7,7 +7,7 @@
   background-color: $primary-color;
 
   &__logo {
-    & > * {
+    & > svg {
       max-width: 100%;
       height: 20rem;
     }
@@ -18,6 +18,13 @@
       backface-visibility: hidden;
       perspective: 1000px;
       animation-iteration-count: infinite;
+    }
+
+    @include respond(tab-port) {
+      & > svg {
+        max-width: 100%;
+        max-height: 30vh;
+      }
     }
   }
 
@@ -52,6 +59,10 @@
 
     @include respond(tab-land) {
       font-size: 2rem;
+    }
+
+    @include respond(tab-port) {
+      font-size: 1.8rem;
     }
   }
 }
